[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/stairs.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="stairs" type="Line2D"]
position = Vector2( 64, 56 )
points = PoolVector2Array( -64, -56, -48, -56, -48, -72, -32, -72, -32, -88, -16, -88, -16, -104, 0, -104 )
script = ExtResource( 1 )

[node name="bottomStair" type="Area2D" parent="."]
position = Vector2( -64, -56 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottomStair"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="bottomStair"]
position = Vector2( 0, -8 )

[node name="topStair" type="Area2D" parent="."]
position = Vector2( -64, -56 )

[node name="Position2D" type="Position2D" parent="topStair"]
position = Vector2( 48, -56 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="topStair"]
position = Vector2( 48, -48 )
shape = SubResource( 2 )

[connection signal="body_entered" from="bottomStair" to="." method="_on_bottomStair_body_entered"]
[connection signal="body_exited" from="bottomStair" to="." method="_on_bottomStair_body_exited"]
[connection signal="body_entered" from="topStair" to="." method="_on_topStair_body_entered"]
[connection signal="body_exited" from="topStair" to="." method="_on_topStair_body_exited"]
